<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.karuslabs</groupId>
    <artifactId>chimera</artifactId>
    <version>4.5.0-SNAPSHOT</version>
    <packaging>pom</packaging> 
    
    <name>Chimera</name>
    <description>A collection of Karus Lab's libraries and development tools</description>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <release>11</release>
    </properties>

    <modules>
        <module>annotations</module>
        <module>commons</module>
        <module>scribe</module>
    </modules>
          
    <profiles>
        <profile>
            <id>karus</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>karus</id>
                    <url>https://repo.karuslabs.com/repository/chimera-releases</url>
                </repository>

                <snapshotRepository>
                    <id>karus</id>
                    <url>https://repo.karuslabs.com/repository/chimera-snapshots</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
        
        <profile>
            <id>github-packages</id>
            <activation>
                <!-- Pending GitHub Package Registry's support for mutable packages !-->
                <activeByDefault>false</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>github-packages</id>
                    <url>https://maven.pkg.github.com/Pante/chimera</url>
                </repository>

                <snapshotRepository>
                    <id>github-packages</id>
                    <url>https://maven.pkg.github.com/Pante/chimera</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>
    
    <repositories>   
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
                
        <repository>
            <id>noti-spigot-mirror</id>
            <url>https://repo.karuslabs.com/repository/spigot/</url>
        </repository>
              
        <repository>
            <id>minecraft-libraries</id>
            <url>https://libraries.minecraft.net</url>
        </repository>
            
        <repository>
            <id>lingua-releases</id>
            <url>https://repo.karuslabs.com/repository/lingua-franca-releases/</url>
        </repository>
    </repositories>
    
    <dependencies>      
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.1.1</version>
            <scope>compile</scope>
        </dependency>
        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
                
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.1</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.29</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>